--- a/foundry.toml
+++ b/foundry.toml
@@ -4,14 +4,14 @@
   auto_detect_solc = false
   block_timestamp = 1_680_220_800 # March 31, 2023 at 00:00 GMT
   bytecode_hash = "none"
-  evm_version = "shanghai"
+  evm_version = "cancun"
   fuzz = { runs = 1_000 }
   gas_reports = ["*"]
   optimizer = true
   optimizer_runs = 10_000
   out = "out"
   script = "script"
-  solc = "0.8.25"
+  solc = "0.8.26"
   src = "src"
   test = "test"
 
