--- a/foundry.toml
+++ b/foundry.toml
@@ -4,7 +4,7 @@
   auto_detect_solc = false
   block_timestamp = 1_680_220_800 # March 31, 2023 at 00:00 GMT
   bytecode_hash = "none"
-  evm_version = "cancun"
+  evm_version = "Cancun"
   fuzz = { runs = 1_000 }
   gas_reports = ["*"]
   optimizer = true
@@ -14,6 +14,7 @@
   solc = "0.8.26"
   src = "src"
   test = "test"
+  via_ir = true
 
 [profile.ci]
   fuzz = { runs = 10_000 }
